# bcn3d_moveo_ros2

./: Dockerfile  README.md  data.txt  go_go_big_run.sh  run_1.sh  run_2.sh  run_3.sh  runlaunch.sh
bcn3d_moveo_description/: CMakeLists.txt  package.xml
bcn3d_moveo_description/launch/: bcn3d_moveo.launch.py
bcn3d_moveo_description/meshes/: Base.STL  CAM.STL  Link_3.STL  Link_4.STL  Link_5.STL
bcn3d_moveo_description/meshes/old/: Link_5.STL  Link_5_1.STL
bcn3d_moveo_description/models/: bcn3d_moveo.urdf  bcn3d_moveo_joy.urdf
bcn3d_moveo_moveit/: .setup_assistant  CMakeLists.txt  package.xml
bcn3d_moveo_moveit/config/: bcn3d_moveo.ros2_control.xacro  bcn3d_moveo.srdf  bcn3d_moveo.urdf.xacro  bcn3d_moveo_joy.urdf.xacro  bcn3d_moveo_sim_config.yaml  initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  moveit_controllers_joy.yaml  ompl_planning.yaml  ros2_controllers.yaml  ros2_controllers_joy.yaml  try.rviz
bcn3d_moveo_moveit/launch/: bcn3d_moveo.launch.py  bcn3d_moveo_joy.launch.py  bcn3d_moveo_sim.launch.py  demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
bcn3d_moveo_scripts/: CMakeLists.txt  package.xml
bcn3d_moveo_scripts/FSR/: FSR.ino
bcn3d_moveo_scripts/bcn3d_moveo_arduino/: bcn3d_moveo_arduino.ino
bcn3d_moveo_scripts/bcn3d_moveo_arduino/detail/: arm_joint_state__builder.hpp  arm_joint_state__functions.h  arm_joint_state__rosidl_typesupport_fastrtps_c.h  arm_joint_state__rosidl_typesupport_fastrtps_cpp.hpp  arm_joint_state__rosidl_typesupport_introspection_c.h  arm_joint_state__rosidl_typesupport_introspection_cpp.hpp  arm_joint_state__struct.h  arm_joint_state__struct.hpp  arm_joint_state__traits.hpp  arm_joint_state__type_support.h
bcn3d_moveo_scripts/bcn3d_moveo_arduino_tcp/: bcn3d_moveo_arduino_tcp.ino
bcn3d_moveo_scripts/src/: go_go_example.txt  go_go_generate.cpp  go_go_generate_seven.cpp  go_go_joint1.cpp  go_go_joint2.cpp  go_go_joint3.cpp  go_go_joint4.cpp  go_go_test_ml.cpp  go_go_to_the_point.cpp  go_go_to_the_point.txt  go_go_video.cpp  moveit_convert.cpp  to_the_point.cpp
media/: rviz.webm
ml/: README.md
my_robot_teleop/: CMakeLists.txt  package.xml
my_robot_teleop/src/: example.cpp  joystick_servo_example.cpp  last.cpp
py_pubsub/: package.xml  setup.py
py_pubsub/nice_try/: arduino_011223.ino  arduino_061023.ino  arduino_111023.ino  go_go_bcn3d(11.10.23).py  go_go_bcn3d(2.10.23).py  go_go_bcn3d(27.09.23).py  go_go_bcn3d(4.10.23).py  go_go_bcn3d(6.10.23).py  go_go_bcn3d_011223.py
py_pubsub/py_pubsub/: go_go_bcn3d.py  go_go_bcn3d_tcp.py  go_go_camera.py  go_go_find.py  go_go_fsr_topic.py  go_go_point_to_grasp.py  go_go_point_to_grasp_and_marker.py  go_go_rep.py  go_go_sub.py  go_go_sub_with_roma.py  go_go_topic_for_picking.py  go_go_video.py  go_go_workspace.py  go_go_workspace_all.py  go_go_workspace_delaunay.py  go_go_workspace_delaunay_inside.py  go_go_workspace_inside.py  joy_teleop.py  pub.py  publish.py
